feat: coroutine in action

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=demo
-server.tomcat.threads.max=5
-server.tomcat.max-connections=8192
-
+server.tomcat.threads.max=12
+server.tomcat.max-connections=50000
+server.tomcat.connection-timeout=-1
 logging.level.com.example=trace
+logging.level.kotlinx.coroutines=trace
